--- a/frontend/src/Pages/Homepage/css/Header.module.css
+++ b/frontend/src/Pages/Homepage/css/Header.module.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Graduate&display=swap');
 body{
-    background-color: rgb(245, 236, 224);
+    background-color:#FFFFF0;
 }
 .heading{
     display: flex;
