--- a/frontend/src/Pages/Homepage/css/Header.module.css
+++ b/frontend/src/Pages/Homepage/css/Header.module.css
@@ -26,3 +26,12 @@ h1{
     line-height:1.7rem;
     color: rgb(32, 110, 211);
 }
+@media (max-width: 811px) {
+    body{
+        background-color: rgb(182, 29, 75);
+    }
+    .mainheading{
+        font-size: 29px;
+    }
+    
+}
