--- a/frontend/src/Pages/Homepage/css/Header.module.css
+++ b/frontend/src/Pages/Homepage/css/Header.module.css
@@ -26,10 +26,17 @@ h1{
     line-height:1.7rem;
     color: rgb(32, 110, 211);
 }
-@media (max-width: 811px) {
-    body{
-        background-color: rgb(182, 29, 75);
+@media (max-width: 1563px) {
+    .mainheading{
+        font-size: 35px;
     }
+}
+@media (max-width: 1143px) {
+    .mainheading{
+        font-size: 32px;
+    }
+}
+@media (max-width: 811px) {
     .mainheading{
         font-size: 29px;
     }
