--- a/frontend/src/Pages/Homepage/css/Header.module.css
+++ b/frontend/src/Pages/Homepage/css/Header.module.css
@@ -13,8 +13,11 @@ body{
 h1{
     font-family: 'Graduate';
     font-weight: 400;
-    font-size: 40px;
+    font-size: 33px;
    
+}
+.heading img{
+    margin-left: 1%;
 }
 
 .headerP1{
