--- a/frontend/src/Pages/Login/EmployerLogin/EmployerLoginPageCss.module.css
+++ b/frontend/src/Pages/Login/EmployerLogin/EmployerLoginPageCss.module.css
@@ -83,13 +83,14 @@ margin-left: 1%;
     font-size: 22px;
     margin-left: 33%;
 }
-input[type=text] {
+
+.employerlogininput{
     width: 63%;
-  padding: 12px 20px;
-  margin: 3% 0;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 3px solid #C0C0C0;
+    padding: 12px 20px;
+    margin: 3% 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 3px solid #C0C0C0;
 }
 .usernamelabel{
     position: absolute;
