--- a/frontend/src/Pages/Login/UniversityLogin/UniversityLoginPageCss.module.css
+++ b/frontend/src/Pages/Login/UniversityLogin/UniversityLoginPageCss.module.css
@@ -85,7 +85,7 @@ h1{
     margin-left: 33%;
 }
 
-input[type=text] {
+.universitylogininput{
     width: 63%;
     padding: 12px 20px;
     margin: 3% 0;
@@ -93,7 +93,6 @@ input[type=text] {
     border: none;
     border-bottom: 3px solid #C0C0C0;
 }
-
 .usernamelabel {
     position: absolute;
 
