--- a/frontend/src/Pages/UniversityModule/css/UniversityHomepageBody.module.css
+++ b/frontend/src/Pages/UniversityModule/css/UniversityHomepageBody.module.css
@@ -91,19 +91,11 @@
   display: inline-block;
   margin-left: 32%;
 }
-.dropdowncontent {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  width: fit-content;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  margin-top: 5%;
-  z-index: 1;
-}
-.dropdown:hover .dropdowncontent {
+
+/* .dropdown:hover .dropdowncontent {
   display:contents;
 
-}
+} */
 .dropbtn img{
   width: 27px;
 }
